--- a/post.html
+++ b/post.html
@@ -17,6 +17,7 @@
   </div>
 
   <!-- <script>
+    fetch.js로 모듈화 하였음!
     const data = document.getElementById("form");
 
     data.addEventListener('submit',(e)=>{
