POST로 만든 파일이 a태그를 사용하여 이동하면 a태그는 GET요청이므로 GET에 담긴 데이터는 존재 하지 않으므로 페이지가 리셋 되는 것이었음. 이를 보완하고자 case를 하나 더 판 다음 주소를 입력해주고, a태그에 그 주소를 입력해주었음!

--- a/post.html
+++ b/post.html
@@ -12,7 +12,7 @@
     <form id="form">
       <input id="input" name = "test" type="text">
       <button id="button" type="submit" onclick="movePage()">버튼</button>
-      <a href="http://localhost:5050/post">포스트로이동</a>
+      <a href="http://localhost:5050/test">포스트로이동</a>
     </form>
   </div>
 
